# ComPasso

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  LICENSE  README.md  _config.yml  compasso.spec  deploy_main.py  main.py  pyproject.toml  pysidedeploy.spec  pytest.ini  requirements-dev.txt  requirements.txt  version_info.txt
.github/workflows/: tests.yml
docs/: app-settings.md  bitalino-connection.md  bitalino-simulado.md  configuration-file.md  experiment-menu.md  getting-started.md  index.md  input-files.md  output-data.md  running-an-experiment.md  troubleshooting.md
docs/assets/images/: README.md
scripts/: build_nuitka.py  fake_bitalino.py  generate_version_info.py
src/: __init__.py
src/compasso/: __init__.py
src/compasso/core/: __init__.py  app_prefs.py  audio.py  bitalino_connect.py  calibration.py  config_manager.py  constants.py  experiment.py  fake_bitalino.py  musics.py  player.py  recorder.py  updates.py
src/compasso/gui/: __init__.py  app.py  assets.py  calibration_window.py  context.py  experiment_config_window.py  graph_settings_window.py  loading_screen.py  theme.py  widgets.py
src/compasso/gui/frames/: bottom_frame.py  graph_frame.py  mid_frame.py  signal_plot.py  stepper_frame.py  top_frame.py
src/compasso/gui_qt/: __init__.py  __main__.py  app.py  assets.py  carregamento.py  context.py  palettes.py  signal_chart.py  theme.py
src/compasso/gui_qt/controllers/: __init__.py  app_controller.py  app_settings_controller.py  calibration_controller.py  config_controller.py  connection_controller.py  experiment_controller.py  files_controller.py  graph_settings_controller.py  participant_controller.py  player_controller.py  updates_controller.py
src/compasso/gui_qt/qml/: AppMenuBar.qml  AppWindow.qml  Main.qml  TitleBar.qml
src/compasso/gui_qt/qml/components/: AppButton.qml  AppComboBox.qml  AppSlider.qml  AppSwitch.qml  AppTextField.qml  Caption.qml  Card.qml  CollapsibleCard.qml  ConfirmDialog.qml  Dica.qml  Equalizer.qml  ErroCampo.qml  FormSection.qml  GhostButton.qml  LogoMark.qml  MessageDialog.qml  SplashOverlay.qml  ThemeToggle.qml  UpdateDialog.qml
src/compasso/gui_qt/qml/views/: CartaoConfig.qml  ConnectionView.qml  FooterView.qml  MainContent.qml  PlayerBarView.qml  SignalChartView.qml  StepperView.qml
src/compasso/gui_qt/qml/windows/: AppSettingsWindow.qml  CalibrationWindow.qml  ExperimentConfigWindow.qml  GraphSettingsWindow.qml
src/compasso/utils/: __init__.py  bootstrap.py  configs.py  log_context.py  paths.py  resources.py  sys_logs.py  validation.py  version.py
src/core/: __init__.py  audio.py  bitalino_connect.py  config_manager.py  constants.py  experiment.py  musics.py  player.py  recorder.py
src/gui/: __init__.py  app.py  assets.py  canvas_widgets.py  context.py  experiment_config_window.py  graph_settings_window.py  guiconfigs.py  loading_screen.py  main.py  theme.py  widgets.py
src/gui/frames/: __init__.py  bottom_frame.py  graph_frame.py  mid_frame.py  signal_plot.py  top_frame.py
src/utils/: __init__.py  bootstrap.py  configs.py  formatting.py  paths.py  sys_logs.py  validation.py
tests/: README.md  conftest.py  test_acquisition_sync.py  test_app_prefs.py  test_app_settings_controller.py  test_audio_volume.py  test_button_state_logic.py  test_calibration.py  test_classify_condition.py  test_config_manager.py  test_connection_teste_simulado.py  test_experiment_timing.py  test_fake_bitalino.py  test_field_validation.py  test_formatting.py  test_graph.py  test_graph_settings.py  test_logging.py  test_mac_validation.py  test_musics.py  test_paths.py  test_player_api.py  test_playlist.py  test_recorder_naming.py  test_resources.py  test_updates.py  test_validation.py  test_versioning.py  test_volume_sessao.py  test_watchdog.py
